--- a/pt1-fundamentals/indexChallenge.html
+++ b/pt1-fundamentals/indexChallenge.html
@@ -31,6 +31,7 @@
 
   <script src="Challenges1-2.js"></script>
   <script src="Challenge3.js"></script>
+  <script src="Challenge4.js"></script>
 
 </body>
 
