--- a/pt2-fundamentals/indexChallenge.html
+++ b/pt2-fundamentals/indexChallenge.html
@@ -30,6 +30,7 @@
   <h1>JavaScript Fundamentals – Part 1</h1>
 
   <script src="Challenge1.js"></script>
+  <script src="Challenge2.js"></script>
 
 </body>
 
