--- a/pt2-fundamentals/indexChallenge.html
+++ b/pt2-fundamentals/indexChallenge.html
@@ -31,7 +31,7 @@
 
   <script src="Challenge1.js"></script>
   <script src="Challenge2.js"></script>
-
+  <script src="Challenge3.js"></script>
 </body>
 
 </html>
