--- a/pt2-fundamentals/indexChallenge.html
+++ b/pt2-fundamentals/indexChallenge.html
@@ -32,6 +32,7 @@
   <script src="Challenge1.js"></script>
   <script src="Challenge2.js"></script>
   <script src="Challenge3.js"></script>
+  <script src="Challenge4.js"></script>
 </body>
 
 </html>
